# token-topicer

./: pyproject.toml
config/: config.yaml
token_topicer/: mlp.py  utils.py
token_topicer/cross_encoder/: calibrate.py  dataset.py  evaluate.py  inference.py  model.py  test.py  trace_model.py  train.py
token_topicer/token_gliner/: adapt_model.py  dataset.py  model.py  train.py
