[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "token-topicer"
version = "0.1.0"
description = "Token Topicer"
authors = [
    { name = "Martin Kostelník", email = "ikostelnik@fit.vut.cz" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["token_topicer"]